--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
       </p>
     </header>
     <!--hero-->
-    <section>
-      <h1>
-        Эффективные решения для вашего бизнеса
-      </h1>
-      <p>
+    <div>
+      <section>
+        <h1>
+          Эффективные решения для вашего бизнеса
+        </h1>
         <a href="">Заказать услугу</a>
-      </p>
-    </section>
+      </section>
+    </div>
     <!--why-us-->
     <section>
       <h2>
@@ -89,13 +89,13 @@
       </h2>
       <ul>
         <li>
-          <img src="./images/img.jpg" alt="photo1" />
+          <img src="./images/img.jpg" alt="photo1" width="370" />
         </li>
         <li>
-          <img src="./images/img-2.jpg" alt="photo2" />
+          <img src="./images/img-2.jpg" alt="photo2" width="370" />
         </li>
         <li>
-          <img src="./images/img-3.jpg" alt="photo3" />
+          <img src="./images/img-3.jpg" alt="photo3" width="370" />
         </li>
       </ul>
     </section>
@@ -157,9 +157,7 @@
     </section>
     <!--footer-->
     <footer>
-      <p>
-        <a href=".">WebStudio</a>
-      </p>
+      <a href=".">WebStudio</a>
       <address>
         г. Киев, пр-т Леси Украинки, 26
       </address>
